--- a/app/assets/stylesheets/index/main.css
+++ b/app/assets/stylesheets/index/main.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
   font-family: 'Glyphicons Halflings';
   src: url('/assets/glyphicons-halflings-regular.eot');
   src: url('/assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
@@ -15,9 +15,9 @@
 	url('/assets/index/Helvetica.svg#Helvetica') format('svg');
 	font-weight: normal;
 	font-style: normal;
-}
-body {
-    font: 14px/17px'Helvetica, Arial, sans-serif';
+}*/
+body {/*
+    font: 14px/17px'Helvetica, Arial, sans-serif';*/
     background: url('../index/bbg-body.jpg') !important;
     margin: 0 auto;
     font-family: arile;
@@ -28,6 +28,7 @@ body {
 }
 #header .navbar {
     margin: 0;
+    border-radius: 0;
 }
 .header-top {
     background-color: #fff;
@@ -57,6 +58,9 @@ body {
 }
 .dorpdown-shop .caret {
     margin: -14px 0 0 6px !important;
+}
+#header .navbar-right {
+    margin-top: 0 !important;
 }
 .dorpdown-shop .btn-shop {
     border: none !important;
