Header updated for VA

--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -48,7 +48,7 @@
               %li
                 %a{:href => "/" }MarketPlace
               %li
-                %a{:href => chatbox_url.to_s }Chat With Vendors
+                %a{:href => "http://still-ridge-7153.herokuapp.com/chatbox" }Chat With Vendors
               %li
             
             %ul.nav.navbar-nav.navbar-right.right-admin-dropdown
