--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -118,10 +118,10 @@
                               = link_to person_settings_path(user) do
                                 = icon_tag("settings", ["icon-with-text"])
                                 = t("layouts.logged_in.settings")
-                            %li
-                              = link_to logout_path do
-                                = icon_tag("logout", ["icon-with-text"])
-                                = t("layouts.logged_in.logout")
+                            / %li
+                            /   = link_to logout_path do
+                            /     = icon_tag("logout", ["icon-with-text"])
+                            /     = t("layouts.logged_in.logout")
                         %li
                           = link_to about_infos_path do
                             = icon_tag("information", ["icon-with-text"])
