--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -47,14 +47,23 @@
                       %a{:href => "http://still-ridge-7153.herokuapp.com/vendors"} My Vendors
               %li
                 %a{:href => "/" }MarketPlace
-              %li
-                %a{:href => "http://still-ridge-7153.herokuapp.com/chatbox" }Chat With Vendors
+              %li.dropdown
+                %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+                  Chat
+                  %span.caret
+                %ul.dropdown-menu{:role => "menu"}
+                  %li
+                    %a{:href => chat_chatbox_index_path} Chat
+                  %li.divider
+                  %li
+                    %a{:href => manage_chatbox_index_path} Manage Chat
               %li
             
             %ul.nav.navbar-nav.navbar-right.right-admin-dropdown
               %li.dropdown
                 %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
-                  = @current_user.given_name.slice(0,1).capitalize + @current_user.given_name.slice(1..-1)
+                  = @current_user.given_name + @current_user.family_name
+                  //= @current_user.given_name.slice(0,1).capitalize + @current_user.given_name.slice(1..-1)
                   %span.caret
                 %ul.dropdown-menu{:role => "menu"}
                   %li= link_to "My Profile", "http://still-ridge-7153.herokuapp.com/users/edit"
