--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -53,10 +53,10 @@
                   %span.caret
                 %ul.dropdown-menu{:role => "menu"}
                   %li
-                    %a{:href => chat_chatbox_index_path} Chat
+                    %a{:href => 'http://still-ridge-7153.herokuapp.com/chatbox/chat'} Chat
                   %li.divider
                   %li
-                    %a{:href => manage_chatbox_index_path} Manage Chat
+                    %a{:href => 'http://still-ridge-7153.herokuapp.com/chatbox/manage'} Manage Chat
               %li
             
             %ul.nav.navbar-nav.navbar-right.right-admin-dropdown
