--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -23,14 +23,14 @@
                 %ul.dropdown-menu{:role => "menu"}
                   %li
                     %a{:href => "http://still-ridge-7153.herokuapp.com/businesses/search_business"} Add Property
-                  - if true
+                  - unless @current_user.is_admin?
                     %li.divider
                     %li
                       %a{:href => "http://still-ridge-7153.herokuapp.com/businesses"} My Properties
                   - else
                     %li
                       %a{:href => "http://still-ridge-7153.herokuapp.com/businesses"} Properties
-              - if true
+              - if @current_user.is_admin?
                 %li
                   %a{:href => "http://still-ridge-7153.herokuapp.com/businesses/brand_list"} Brands
                 %li
