--- a/app/views/layouts/_vA_Header.haml
+++ b/app/views/layouts/_vA_Header.haml
@@ -39,7 +39,7 @@
         %li
           %a{:href => "/" }MarketPlace
         %li
-          %a{:href => "http://still-ridge-7153.herokuapp.com/chatbox" }Chat With Vendors
+          %a{:href => "http://still-ridge-7153.herokuapp.com/chat" }Chat
         %li
       
       %ul.nav.navbar-nav.navbar-right.right-admin-dropdown
