--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -47,16 +47,8 @@
                       %a{:href => "http://still-ridge-7153.herokuapp.com/vendors"} My Vendors
               %li
                 %a{:href => "/" }MarketPlace
-              %li.dropdown
-                %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
-                  Chat
-                  %span.caret
-                %ul.dropdown-menu{:role => "menu"}
-                  %li
-                    %a{:href => 'http://still-ridge-7153.herokuapp.com/chatbox/chat'} Chat
-                  %li.divider
-                  %li
-                    %a{:href => 'http://still-ridge-7153.herokuapp.com/chatbox/manage'} Manage Chat
+              %li
+                %a{:href => "http://still-ridge-7153.herokuapp.com/chat" }Chat
               %li
             
             %ul.nav.navbar-nav.navbar-right.right-admin-dropdown
