VA Header updated

--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -10,7 +10,7 @@
 
   %body
     %header#header
-      = render partial: 'vA_Header'
+      = render partial: 'layouts/vA_Header'
       .header-top
         .container
           .row
