Header VA update 1

--- a/app/views/layouts/_global_header.haml
+++ b/app/views/layouts/_global_header.haml
@@ -23,13 +23,13 @@
         #header-locales-toggle-menu.toggle-menu.header-toggle-menu-language.hidden
           = render :partial => "layouts/locale_select", :collection => available_locales, :as => :loc_array, locals: {return_after_locale_change: return_after_locale_change}
 
-    - unless logged_in
-      .header-right
-        = link_to sign_up_path, class: "header-text-link header-hover" do
-          = t("header.signup")
-      .header-right
-        = link_to login_path, class: "header-text-link header-hover", id: "header-login-link" do
-          = t("header.login")
+    / - unless logged_in
+    /   .header-right
+    /     = link_to sign_up_path, class: "header-text-link header-hover" do
+    /       = t("header.signup")
+    /   .header-right
+    /     = link_to login_path, class: "header-text-link header-hover", id: "header-login-link" do
+    /       = t("header.login")
 
     .header-left.hidden-tablet
       .header-menu-container.toggle.hidden{data: {toggle: '#header-menu-toggle-menu', 'toggle-position' => 'absolute'}}
