--- a/app/views/layouts/_vA_Header_CS.haml
+++ b/app/views/layouts/_vA_Header_CS.haml
@@ -3,22 +3,22 @@
   .header-holder 
     .logo 
       %a{:href => "http://still-ridge-7153.herokuapp.com/"} Vendor Advisor
-    -if @current_user.present?
+    - if  @current_user.present?
       %ul#myTopnav.topnav
         %li
           .dropdown
             %button.dropbtn{:onclick => "myFunction()"} Properties
-            %ul#myDropdown.dropdown-content
+            %ul#myDropdown1.dropdown-content
               %li
                 %a{:href => "http://still-ridge-7153.herokuapp.com/businesses/search_business"} Add Property
-            - unless @current_user.is_admin?
-              %li.divider
-              %li
-                %a{:href => "http://still-ridge-7153.herokuapp.com/businesses"} My Properties
-            - else
-              %li
-                %a{:href => "http://still-ridge-7153.herokuapp.com/businesses"} Properties
-        - if @current_user.is_admin?
+              - unless true
+                %li.divider
+                %li
+                  %a{:href => "http://still-ridge-7153.herokuapp.com/businesses"} My Properties
+              - else
+                %li
+                  %a{:href => "http://still-ridge-7153.herokuapp.com/businesses"} Properties
+        - if  @current_user.is_admin?
           %li
             %a{:href => "http://still-ridge-7153.herokuapp.com/businesses/brand_list"} Brands
           %li
@@ -26,27 +26,25 @@
         - else
           %li
             .dropdown
-              %button.dropbtn{:onclick => "myFunction()"} Vendors
-              %ul#myDropdown.dropdown-content
+              %button.dropbtn{:onclick => "myFunction1()"} Vendors
+              %ul#myDropdown2.dropdown-content
                 %li
                   %a{:href => "http://still-ridge-7153.herokuapp.com/businesses/search_vendor"} Add Vendor
                 %li
                   %a{:href => "http://still-ridge-7153.herokuapp.com/vendors"} My Vendors
-        %li
-          %a{:href => "/"} MarketPlace
-        %li
-          %a{:href => "http://still-ridge-7153.herokuapp.com/chat"} Chat
-        %li.icon
-          %a{:href => "javascript:void(0);", :onclick => "myFunction()"} ☰
-      %ul#myTopnav.topnav.nav-right-top
+          %li
+            %a{:href => "/"} MarketPlace
+          %li
+            %a{:href => "http://still-ridge-7153.herokuapp.com/chat"} Chat
+      %ul#myTopnav.topnav.nav-right-top 
         %li
           .dropdown
-            %button.dropbtn{:onclick => "myFunction()"} 
+            %button.dropbtn{:onclick => "myFunction2()"} 
             = @current_user.given_name.slice(0,1).capitalize + @current_user.given_name.slice(1..-1)
-            %ul#myDropdown.dropdown-content
-            %li= link_to "My Profile", "http://still-ridge-7153.herokuapp.com/users/edit"
-            %li= link_to "Logout", "http://still-ridge-7153.herokuapp.com/users/logout", :method => 'delete'
-       
+            %ul#myDropdown3.dropdown-content
+              %li= link_to "My Profile", "http://still-ridge-7153.herokuapp.com/users/edit"
+              %li= link_to "Logout", "http://still-ridge-7153.herokuapp.com/users/logout", :method => 'delete'
+     
 :css
   .header-top {
     font-family: 'Helvetica';
@@ -62,6 +60,7 @@
     width: 1170px;
     margin: 0 auto 0;
   }
+
   .logo {
     float: left;
     padding: 15px 15px;
@@ -85,11 +84,7 @@
       float: left;
       
   }
-  .header-holder:after {
-    display:block;
-    clear:both;
-    content:'';
-  }
+  header-holder:after,
   ul.topnav:after {
     display:block;
     clear:both;
@@ -204,6 +199,7 @@
     float:left;
     width: 100%;
   }
+
   /* Links inside the dropdown */
   ul.topnav li .dropdown-content a {
     display: block;
@@ -266,7 +262,24 @@
   /* When the user clicks on the button, 
   toggle between hiding and showing the dropdown content */
   function myFunction() {
-      document.getElementById("myDropdown").classList.toggle("show");
+    removeShowClass();
+    document.getElementById("myDropdown1").classList.toggle("show");
+  }
+
+  function myFunction1() {
+    removeShowClass();
+    document.getElementById("myDropdown2").classList.toggle("show");
+  }
+
+  function myFunction2() {
+    removeShowClass();
+    document.getElementById("myDropdown3").classList.toggle("show");
+  }
+
+  function removeShowClass(){
+    document.getElementById("myDropdown3").classList.remove("show");
+    document.getElementById("myDropdown2").classList.remove("show");
+    document.getElementById("myDropdown1").classList.remove("show");
   }
 
   // Close the dropdown menu if the user clicks outside of it
