--- a/app/views/layouts/_global_header.haml
+++ b/app/views/layouts/_global_header.haml
@@ -40,23 +40,23 @@
 
     = render :partial => "layouts/header_menu", locals: { return_after_locale_change: return_after_locale_change, available_locales: available_locales, icons: icons}
 
-    -#
-      If necessary, the buttons will overlap with the logo. Buttons should be on top, that's
-      keep the logo here after buttons
-    .header-left.header-logo-container
-      = link_to landing_page_path, :class => "header-logo", :id => "header-logo" do
-        - if @current_community.logo.present?
-          %i.header-square-logo.hidden-tablet
-            -# Logo is here, it's a CSS background
-        - else
-          %span.header-square-logo-text.hidden-tablet
-            = @current_community.name(I18n.locale)[0]
-        - if @current_community.wide_logo.present?
-          %i.header-wide-logo.visible-tablet
-            -# Logo is here, it's a CSS background
-        - else
-          %span.header-wide-logo-text.visible-tablet
-            = @current_community.name(I18n.locale)
+    / -#
+    /   If necessary, the buttons will overlap with the logo. Buttons should be on top, that's
+    /   keep the logo here after buttons
+    / .header-left.header-logo-container
+    /   = link_to landing_page_path, :class => "header-logo", :id => "header-logo" do
+    /     - if @current_community.logo.present?
+    /       %i.header-square-logo.hidden-tablet
+    /         -# Logo is here, it's a CSS background
+    /     - else
+    /       %span.header-square-logo-text.hidden-tablet
+    /         = @current_community.name(I18n.locale)[0]
+    /     - if @current_community.wide_logo.present?
+    /       %i.header-wide-logo.visible-tablet
+    /         -# Logo is here, it's a CSS background
+    /     - else
+    /       %span.header-wide-logo-text.visible-tablet
+    /         = @current_community.name(I18n.locale)
 
 
 
