--- a/app/assets/stylesheets/index/main.css
+++ b/app/assets/stylesheets/index/main.css
@@ -38,7 +38,8 @@ body {/*
     top: 0;
     left: 0;
     padding: 6px 0 0;
-    height: 30px;
+    height: 37px;
+    background: #eee;
     -webkit-box-shadow: 0px 0px 8px -1px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 0px 8px -1px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 8px -1px rgba(0, 0, 0, 0.75);
@@ -128,12 +129,20 @@ body {/*
      box-shadow: none;
 }
 .login-menu {
-    display: inline-block;
+  display: inline-block;
+  margin-right: 5px;
+  border: 1px solid black;
+  border-radius: 4px;
+  background: #eee;
+
 }
 .login-menu  .login-btn{
     background: none !important;
     padding: 0 !important;
     border: none !important;
+    font-size: 14px;
+    width: 126px;
+    height: 27px;
 }
 .top-header-list li .dropdown-menu li {
     float: none !important;
