--- a/app/assets/stylesheets/views/_header.css.scss
+++ b/app/assets/stylesheets/views/_header.css.scss
@@ -21,6 +21,10 @@ $elementSpacing: lines(0.5);
 .header {
   height: $headerHeight;
   width: 100%;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  background: #eee;
+  padding: 4px 39px;
 }
 
 .header-wrapper {
